# skypro_django_hw1

./: README.md  ads.json  csv_to_json_ad.py  csv_to_json_location.py  csv_to_json_user.py  db.sqlite3  dump_2022-12-06_10_32_00.sql  location.json  manage.py  my_csv.py  my_csv2.py  pyproject.toml  pytests.ini  user.json
ads/: admin.py  cat_urls.py  models.py  serializers.py  urls.py  user_urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_category_slug.py  0004_remove_user_location_user_locations.py  0005_alter_ad_image.py  0006_alter_location_lat_alter_location_lng.py
authentication/: models.py  urls.py
authentication/migrations/: 0001_initial.py
skypro_django_hw1/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
